styles/autohide-tree-view.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
// for a full listing of what's available.

.tree-view-resizer.autohide {
  width: auto!important;
  min-width: initial!important;
  transition: max-width .3s;
  position: absolute!important;

  &[data-show-on-right-side="true"] {
    right: 0;
    z-index: 10; // above the text-editor scrollbar
  }

  .tree-view-scroller {
    opacity: 0;
    transition: opacity .5s;
    overflow-x: hidden; // because the item highlighting causes overflow-x
  }

  &:hover .tree-view-scroller {
    opacity: 1;
  }

  .tree-view-resize-handle {
    display: none!important; // we handle resizing, not you!
  }
}

